  * Fix mythvideo to be breaks/replaces. (LP: #797327)
  * Remove jamu and all references to it.  Now built into myth.
  * Convert to using a rsyslog mechanism for log files.  Thanks Michael
    Dean.
  * Make /var/log/mythtv writable by the syslog user.
  * Install rsyslog conf as 40-mythtv-rsyslog.conf instead of just
    mythtv-rsyslog.conf.
  * Build with vaapi support.

  [ Pieter Hoekstra (pieter-hoekstra) ]
  * Add missing space to debian/rules preventing some plugin installation.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Tue, 08 Feb 2011 10:50:52 -0600

mythtv (2:0.24.0+fixes.20110908.1de0431-0ubuntu2) UNRELEASED; urgency=low

  * debian/rules:
    - Don't modify mythtv/VERSION at all during build.  Only use 
      debian/DESCRIBE and restore mythtv/VERSION at end of build.

 -- Mario Limonciello <Mario_Limonciello@Dell.com>  Fri, 11 Nov 2011 12:15:22 -0600

mythtv (2:0.24.0+fixes.20110908.1de0431-0ubuntu1) oneiric; urgency=low

  * Change compile type to profile per discussion in #mythtv again.
  * New upstream checkout (1de0431)
  * >>Upstream changes since last upload (b491236):
  * [1de0431] Fix inefficiency in marking first/last showings without
    programids.
  * [4942639] Fix another invalid-string-format datetime binding.
  * [8b9e5ce] Fix invalid-string-format date passing to MySQL.
  * [4bba807] Use correct exception type for error handling. (cherry
    picked from commit 751a4111b55f629e574970fe5340e1408833180f)
  * [69e3919] Net Utils: Only select distinct grabbers.
  * [2e3105d] Fixed MiroBridge abort when Miro metadata has an invalid
    video filename
  * [d282ee2] Fixed Jamu unnecessary unicode declarations
  * [5655302] Fix a segfault in MythUIHelper::LoadCacheImage()
  * [4bc24ed] RingBuffer: add back inadvertantly removed code that
    allows the readahead thread to sleep when full.
  * [8028a58] MythBrowser: Change the user-agent string reported by the
    browser widget.
  * [c502e0d] Fix scheduler output ordering.