@@ -23,8 +23,10 @@ MYTHTV_CONFIGURE_OPTS +=    --compile-type=profile \
 				--enable-ffmpeg-pthreads \
 				--enable-pic \
 				--enable-vaapi \
-				--perl-config-opts="INSTALLDIRS=vendor"
-
+				--perl-config-opts="INSTALLDIRS=vendor" \
+				--enable-libx264 \
+				--enable-libmp3lame \
+				--enable-libfaac
 ifeq "$(DEB_BUILD_ARCH)" "armel"
 	MYTHTV_CONFIGURE_OPTS += --disable-opengl-video --disable-opengl
 else
